WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296889
surpress webkit.RefCntblBaseVirtualDtor warnings for ArrayBufferView
https://bugs.webkit.org/show_bug.cgi?id=296889
Summary
surpress webkit.RefCntblBaseVirtualDtor warnings for ArrayBufferView
ccarley2
Reported
2025-08-04 11:47:27 PDT
There are incorrect Safer Cpp warnings that say ArrayBufferView needs a virtual destructor.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-04 11:47:35 PDT
<
rdar://problem/157492341
>
ccarley2
Comment 2
2025-08-04 11:50:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48912
EWS
Comment 3
2025-08-12 11:37:00 PDT
Committed
298577@main
(7025aef8e426): <
https://commits.webkit.org/298577@main
> Reviewed commits have been landed. Closing PR #48912 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug