surpress webkit.RefCntblBaseVirtualDtor warnings for ArrayBufferView https://bugs.webkit.org/show_bug.cgi?id=296889 rdar://157492341

Reviewed by Yusuke Suzuki.

This patch makes ArrayBufferView inherit from the NoVirtualDestructorBase class to surpress the Safer Cpp warnings.

* Source/JavaScriptCore/runtime/ArrayBufferView.h:

Canonical link: https://commits.webkit.org/298577@main