Source/JavaScriptCore/runtime/ArrayBufferView.h
@@ -30,6 +30,7 @@
 #include <algorithm>
 #include <limits.h>
 #include <wtf/CheckedArithmetic.h>
+#include <wtf/NoVirtualDestructorBase.h>
 #include <wtf/RefCounted.h>
 #include <wtf/RefPtr.h>
 
@@ -41,7 +42,7 @@ class JSArrayBufferView;
 class JSGlobalObject;
 class CallFrame;
 
-class ArrayBufferView : public RefCounted<ArrayBufferView> {
+class ArrayBufferView : public RefCounted<ArrayBufferView>, public NoVirtualDestructorBase {
 public:
     TypedArrayType getType() const { return m_type; }
 
